--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-numpy
-pandas
-geopandas
+numpy==1.18.5
+pandas==1.1.3
+geopandas==0.6.1
+dash==1.17.0
+plotly==4.13.0
+flask==1.1.2
+folium==0.11.0
+branca==0.4.1
 sodapy
